--- a/app/components/homepage-component/homepage.component.html
+++ b/app/components/homepage-component/homepage.component.html
@@ -87,17 +87,19 @@
             <img class="up2" src="app/assets/img/3.png" alt="">
             <img class="down2" src="app/assets/img/4.png" alt="">
         </div>
-        <div id="negocios" class="col l6 m6 s12 invisible">
-            <div class="graphicElement">
-            </div>
-            <div class="secondElements">
-                <h1 id="para">
-                    <b>Para todas las empresas</b>
-                </h1>
-                <div class="graphicElement2" style="width: 40%;"></div>
-                <h2 class="thicker">Koomkin está diseñado para ayudar a
-                    <b>cualquier tipo de empresa o negocio</b> a incrementar sus ventas; esto sin importar su giro o tamaño.
-                </h2>
+        <div id="negocios" class="col l6 m6 s12">
+            <div class="aniview" data-av-animation="fadeInRight">
+                <div class="graphicElement">
+                </div>
+                <div class="secondElements">
+                    <h1 id="para">
+                        <b>Para todas las empresas</b>
+                    </h1>
+                    <div class="graphicElement2" style="width: 40%;"></div>
+                    <h2 class="thicker">Koomkin está diseñado para ayudar a
+                        <b>cualquier tipo de empresa o negocio</b> a incrementar sus ventas; esto sin importar su giro o tamaño.
+                    </h2>
+                </div>
             </div>
         </div>
     </div>
@@ -106,7 +108,7 @@
 <div id="third" class="parallax-container valign-wrapper gray-div">
     <div class="container">
         <div class="row">
-            <div id="thirdLeft" class="col l7 m7 s12 invisible">
+            <div id="thirdLeft" class="col l7 m7 s12 aniview" data-av-animation="fadeInLeft">
                 <div class="graphicElement">
                 </div>
                 <h1 id="unAlgoritmo">
@@ -128,7 +130,7 @@
                     <div class="fa fa-envelope"></div>
                 </h2>
             </div>
-            <img class="invisible" id="algoritmo" src="app/assets/img/animacion.gif" alt="">
+            <img class="aniview" data-av-animation="fadeInRight" id="algoritmo" src="app/assets/img/animacion.gif" alt="">
         </div>
     </div>
 </div>
@@ -137,7 +139,7 @@
     <div class="parallax">
         <img class="socialBackground" src="app/assets/img/ipad.jpg">
     </div>
-    <div id="fourthLeft" class="container invisible">
+    <div id="fourthLeft" class="container aniview" data-av-animation="fadeInLeft">
         <div class="graphicElement">
         </div>
         <h1 style="color: white">
@@ -150,9 +152,9 @@
             <b>evalúa el desempeño de tu campaña digital.</b>
         </h2>
     </div>
-    <img class="invisible" id="app1" src="app/assets/img/app1.png" alt="">
-    <img class="invisible" id="app2" src="app/assets/img/app2.png" alt="">
-    <img class="invisible" id="app3" src="app/assets/img/app3.png" alt="">
+    <img class="aniview" id="app1" data-av-animation="fadeInDown" src="app/assets/img/app1.png" alt="">
+    <img class="aniview" id="app2" data-av-animation="fadeInDown" src="app/assets/img/app2.png" alt="">
+    <img class="aniview" id="app3" data-av-animation="fadeInDown" src="app/assets/img/app3.png" alt="">
 </div>
 
 <div id="social-div" class="parallax-container valign-wrapper">
@@ -161,7 +163,7 @@
     </div>
     <div class="container">
         <div class="row">
-            <div id="optimiza" class="col l6 m6 s12 invisible">
+            <div id="optimiza" class="col l6 m6 s12 aniview" data-av-animation="fadeInLeft">
                 <div class="graphicElement">
                 </div>
                 <h1 style="color: #3a4d57">
@@ -174,7 +176,7 @@
                 </h2>
             </div>
             <div class="col l6 m6 s12">
-                <img class="invisible" id="likes" src="app/assets/img/prospectos.gif" alt="">
+                <img class="aniview" id="likes" data-av-animation="fadeInRight" src="app/assets/img/prospectos.gif" alt="">
             </div>
         </div>
     </div>
@@ -188,7 +190,7 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col l7 m7 s12 teamElements invisible">
+            <div class="col l7 m7 s12 teamElements aniview" data-av-animation="zoomIn">
                 <div class="graphicElement">
                 </div>
                 <h1>
@@ -245,9 +247,9 @@
         <img class="socialBackground" src="app/assets/img/city.jpg">
     </div>
     <div class="container">
-        <div class="row datosElements invisible">
+        <div id="datosRow" class="row datosElements">
             <div class="socialMedia">
-                <div id="datosDiv">
+                <div class="aniview" id="datosDiv" data-av-animation="zoomIn">
                     <div class="graphicElement" style="border-bottom: 12px solid white;">
                     </div>
                     <h1>
@@ -255,7 +257,7 @@
                     </h1>
                 </div>
                 <div class="col l3 m3 s12">
-                    <div id="un" class="carta">
+                    <div id="un" class="carta aniview" data-av-animation="zoomIn">
                         <div class="mas">
                             <h3 style="color: white;">+ </h2>
                                 <h2 class="counter">8,000</h2>
@@ -264,7 +266,7 @@
                     </div>
                 </div>
                 <div class="col l3 m3 s12">
-                    <div id="dos" class="carta">
+                    <div id="dos" class="carta aniview" data-av-animation="zoomIn">
                         <div class="mas">
                             <h3 style="color: white;">+ </h2>
                                 <h2 class="counter">500,000</h2>
@@ -273,7 +275,7 @@
                     </div>
                 </div>
                 <div class="col l3 m3 s12">
-                    <div id="tres" class="carta">
+                    <div id="tres" class="carta aniview" data-av-animation="zoomIn">
                         <div class="mas">
                             <h3 style="color: white;">+ </h2>
                                 <h2 class="counter">11,000</h2>
@@ -282,7 +284,7 @@
                     </div>
                 </div>
                 <div class="col l3 m3 s12">
-                    <div id="cuatro" class="carta">
+                    <div id="cuatro" class="carta aniview" data-av-animation="zoomIn">
                         <div class="mas">
                             <h3 style="color: white;">+ </h2>
                                 <h2 class="counter">1</h2>
@@ -300,7 +302,7 @@
         <img class="socialBackground" src="app/assets/img/city.jpg">
     </div>
     <div class="container">
-        <div class="row">
+        <div id="contactoRow" class="row">
             <div class="graphicElement">
             </div>
             <h1 style="color: #3a4d57;">
