--- a/app/components/homepage-component/homepage.component.html
+++ b/app/components/homepage-component/homepage.component.html
@@ -4,6 +4,7 @@
             <div class="nav-wrapper">
                 <a href="#inicio" class="brand-logo">
                     <img class="navlogo" height="30px" src="app/assets/img/Logo_Koomkin.png" alt="">
+                    <img class="Wnavlogo" height="30px" src="app/assets/img/wlogo.png" alt="">                    
                 </a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse">
                     <i class="material-icons">menu</i>
