--- a/app/css/mozila.css
+++ b/app/css/mozila.css
@@ -7,15 +7,18 @@
         margin-top: 140%;
     }
     #app1{
-        margin-top: -65%;
+        margin-top: -5%;
     }
     #app2{
-        margin-top: -45%;
+        margin-top: 10%;
     }
     #app3{
-        margin-top: -25%;
+        margin-top: 0%;
     }
     #optimiza {
         margin-left: 15%;
+    }
+    .parallax-container {
+        height: 1000px;
     }
 }
