first mobile version

--- a/app/components/homepage-component/homepage.component.html
+++ b/app/components/homepage-component/homepage.component.html
@@ -4,7 +4,7 @@
             <div class="nav-wrapper">
                 <a href="#inicio" class="brand-logo">
                     <img class="navlogo" height="30px" src="app/assets/img/Logo_Koomkin.png" alt="">
-                    <img class="Wnavlogo" height="30px" src="app/assets/img/wlogo.png" alt="">                    
+                    <img class="Wnavlogo" height="30px" src="app/assets/img/wlogo.png" alt="">
                 </a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse">
                     <i class="material-icons">menu</i>
@@ -82,6 +82,10 @@
         <img class="socialBackground" src="app/assets/img/office.jpg">
     </div>
     <div class="row">
+        <h1 id="para-mob" class="aniview" data-av-animation="fadeInLeft">
+            <b>Para todas las empresas</b>
+        </h1>
+        <img class="aniview" data-av-animation="fadeIn" id="profesionistas" src="app/assets/img/profesionistas.png" alt="">
         <div id="cinta" class="col l6 m6 s12">
             <img class="up1" src="app/assets/img/1.png" alt="">
             <img class="down1" src="app/assets/img/2.png" alt="">
