--- a/app/components/homepage-component/homepage.component.html
+++ b/app/components/homepage-component/homepage.component.html
@@ -4,7 +4,7 @@
             <div class="nav-wrapper">
                 <a href="#inicio" class="brand-logo">
                     <img class="navlogo" height="30px" src="app/assets/img/Logo_Koomkin.png" alt="">
-                    <img class="Wnavlogo" height="30px" src="app/assets/img/wlogo.png" alt="">
+                    <img class="Wnavlogo" height="30px" src="app/assets/img/blanco.png" alt="">
                 </a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse">
                     <i class="material-icons">menu</i>
@@ -58,6 +58,7 @@
             <div class="graphicElement"></div>
             <h1 style="text-transform: inherit;">¿Cuántos clientes nuevos
                 <br> quieres hoy?</h1>
+            <hr>
             <div class="graphicElement2" style="width: 36%"></div>
             <h2 style="color: white">Te presentamos el
                 <b>canal de Ventas Nº1
@@ -82,9 +83,6 @@
         <img class="socialBackground" src="app/assets/img/office.jpg">
     </div>
     <div class="row">
-        <h1 id="para-mob" class="aniview" data-av-animation="fadeInLeft">
-            <b>Para todas las empresas</b>
-        </h1>
         <img class="aniview" data-av-animation="fadeIn" id="profesionistas" src="app/assets/img/profesionistas.png" alt="">
         <div id="cinta" class="col l6 m6 s12">
             <img class="up1" src="app/assets/img/1.png" alt="">
@@ -264,8 +262,8 @@
                 <div class="col l3 m3 s12">
                     <div id="un" class="carta aniview" data-av-animation="zoomIn">
                         <div class="mas">
-                            <h3 style="color: white;">+ </h2>
-                                <h2 class="counter">8,000</h2>
+                            <h2 class="static">+</h2>
+                            <h2 class="counter">+8,000</h2>
                         </div>
                         <h5>Clientes contentos históricamente</h5>
                     </div>
@@ -273,8 +271,8 @@
                 <div class="col l3 m3 s12">
                     <div id="dos" class="carta aniview" data-av-animation="zoomIn">
                         <div class="mas">
-                            <h3 style="color: white;">+ </h2>
-                                <h2 class="counter">500,000</h2>
+                            <h2 class="static">+</h2>
+                            <h2 class="counter">500,000</h2>
                         </div>
                         <h5>Personas impactadas por su publicidad diariamente</h5>
                     </div>
@@ -282,8 +280,8 @@
                 <div class="col l3 m3 s12">
                     <div id="tres" class="carta aniview" data-av-animation="zoomIn">
                         <div class="mas">
-                            <h3 style="color: white;">+ </h2>
-                                <h2 class="counter">11,000</h2>
+                            <h2 class="static">+</h2>
+                            <h2 class="counter">11,000</h2>
                         </div>
                         <h5>Oportunidades de venta generadas diariamente</h5>
                     </div>
@@ -291,8 +289,8 @@
                 <div class="col l3 m3 s12">
                     <div id="cuatro" class="carta aniview" data-av-animation="zoomIn">
                         <div class="mas">
-                            <h3 style="color: white;">+ </h2>
-                                <h2 class="counter">1</h2>
+                            <h2 class="static">+</h2>
+                            <h2 class="counter">1</h2>
                         </div>
                         <h5>Sólo una plataforma tecnológica</h5>
                     </div>
