--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -171,6 +171,11 @@ nav {
     font-weight: bold;
 }
 
+.static {
+    color: white;
+    font-weight: bold;
+}
+
 .modal-content {
     color: #3a4d57;
 }
@@ -200,6 +205,10 @@ b {
     width: 23%;
 }
 
+hr{
+    visibility: hidden;
+}
+
 .down {
     height: auto;
     width: 23%;
@@ -215,6 +224,7 @@ b {
 
 .vid2-div {
     background-color: rgba(0, 0, 0, .6);
+    height: 500px;
 }
 
 .bluem-div {
@@ -287,12 +297,6 @@ b {
 
 #para {
     color: #3a4d57;
-}
-
-#para-mob{
-    visibility: hidden;
-    position: absolute;
-    color: #00A4A7;
 }
 
 #equipo {
@@ -413,8 +417,8 @@ nav ul a {
     height: 100%;
 }
 
-#datos{
-    height: 100%;
+#datos {
+    height: -webkit-fill-available;
 }
 
 nav ul a {
@@ -445,7 +449,7 @@ nav ul a {
     flex-direction: column;
 }
 
-#profesionistas{
+#profesionistas {
     visibility: hidden;
     position: absolute;
 }
@@ -498,10 +502,10 @@ input:not([type]), input[type=text]:not(.browser-default), input[type=password]:
     color: #3a4d57;
 }
 
-#contactoRow{
+#contactoRow {
     margin-top: 25px;
 }
 
-#datosRow{
+#datosRow {
     margin-top: 25px;
 }
