--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -205,7 +205,7 @@ b {
     width: 23%;
 }
 
-hr{
+hr {
     visibility: hidden;
 }
 
@@ -224,7 +224,6 @@ hr{
 
 .vid2-div {
     background-color: rgba(0, 0, 0, .6);
-    height: 500px;
 }
 
 .bluem-div {
@@ -324,7 +323,7 @@ nav ul a {
 }
 
 .form-div {
-    background-color: rgba(255, 198, 0, .7);
+    background-color: rgba(255, 198, 0, 1);
 }
 
 .carta {
@@ -418,7 +417,7 @@ nav ul a {
 }
 
 #datos {
-    height: -webkit-fill-available;
+    height: 500px;
 }
 
 nav ul a {
@@ -504,6 +503,11 @@ input:not([type]), input[type=text]:not(.browser-default), input[type=password]:
 
 #contactoRow {
     margin-top: 25px;
+}
+
+#mensajeContacto {
+    text-align: center;
+    color: #3a4d57;
 }
 
 #datosRow {
