--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -513,3 +513,19 @@ input:not([type]), input[type=text]:not(.browser-default), input[type=password]:
 #datosRow {
     margin-top: 25px;
 }
+
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0;
+    /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type=number]::-webkit-outer-spin-button, input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
