new chat and facebook pixel

--- a/app/components/homepage-component/homepage.component.html
+++ b/app/components/homepage-component/homepage.component.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="nav-wrapper">
                 <a href="#inicio" class="brand-logo">
-                    <img class="navlogo" height="30px" src="app/assets/img/Logo_Koomkin.png" alt="">
-                    <img class="Wnavlogo" height="30px" src="app/assets/img/blanco.png" alt="">
+                    <img class="navlogo" height="30px" src="https://drive.google.com/uc?id=1ehqVRXPM-DMy3w0W3VaykOlZ7wzbtPQj" alt="">
+                    <img class="Wnavlogo" height="30px" src="https://drive.google.com/uc?id=1CyQ0mc_oYwZWSUAsFZ1V0uZ1nz5W1PgJ" alt="">
                 </a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse">
                     <i class="material-icons">menu</i>
@@ -66,8 +66,8 @@
             </h2>
         </div>
         <div class="col s12 m6 s6">
-            <img id="phonee" class="animated fadeInLeft" src="app/assets/img/telefono-sin-Lead.png" alt="">
-            <img id="lead" class="animated zoomIn" src="app/assets/img/solo-el-Lead.png" alt="">
+            <img id="phonee" class="animated fadeInLeft" src="https://drive.google.com/uc?id=1UICk8GEZYSh2Stm211OB-JUixarzmKGN" alt="">
+            <img id="lead" class="animated zoomIn" src="https://drive.google.com/uc?id=1J8k8EIwoK7ugde2QGWXrliH1yCkq7846" alt="">
         </div>
     </div>
     <div class="box-vid"></div>
@@ -80,15 +80,15 @@
 
 <div id="second" class="parallax-container valign-wrapper white-div">
     <div class="parallax">
-        <img class="socialBackground" src="app/assets/img/office.jpg">
+        <img class="socialBackground" src="https://drive.google.com/uc?id=1aEJnz4nD2tLkpSInT1iioJwaCUq5Z0Bf">
     </div>
     <div class="row">
-        <img class="aniview" data-av-animation="fadeIn" id="profesionistas" src="app/assets/img/profesionistas.png" alt="">
+        <img class="aniview" data-av-animation="fadeIn" id="profesionistas" src="https://drive.google.com/uc?id=1S7k-ZumN0-ezB1d-j4GEzOkV_Uux5KiF" alt="">
         <div id="cinta" class="col l6 m6 s12">
-            <img class="up1" src="app/assets/img/1.png" alt="">
-            <img class="down1" src="app/assets/img/2.png" alt="">
-            <img class="up2" src="app/assets/img/3.png" alt="">
-            <img class="down2" src="app/assets/img/4.png" alt="">
+            <img class="up1" src="https://drive.google.com/uc?id=1r-Z3ha5Y7w6PcBYpk2w0t1tGHUeTRYP7" alt="">
+            <img class="down1" src="https://drive.google.com/uc?id=1OrfAAv3OjHm42aC_4DMbkU3l4CGbrPuY" alt="">
+            <img class="up2" src="https://drive.google.com/uc?id=1-33WXJZPn0X9T3FnLFHtcgmbuZWg-Jm7" alt="">
+            <img class="down2" src="https://drive.google.com/uc?id=1hZ38QWXUl5NGboXuOUw31AKtWAF3tatg" alt="">
         </div>
         <div id="negocios" class="col l6 m6 s12">
             <div class="aniview" data-av-animation="fadeInRight">
@@ -133,14 +133,14 @@
                     <div class="fa fa-envelope"></div>
                 </h2>
             </div>
-            <img class="aniview" data-av-animation="fadeInRight" id="algoritmo" src="app/assets/img/animacion.gif" alt="">
+            <img class="aniview" data-av-animation="fadeInRight" id="algoritmo" src="https://drive.google.com/uc?id=1Cq7_fCrL_VvK0-lrmX3pdozmnwrjKOF5" alt="">
         </div>
     </div>
 </div>
 
 <div id="fourth" class="parallax-container valign-wrapper bluet-div">
     <div class="parallax">
-        <img class="socialBackground" src="app/assets/img/ipad.jpg">
+        <img class="socialBackground" src="https://drive.google.com/uc?id=1aEJnz4nD2tLkpSInT1iioJwaCUq5Z0Bf">
     </div>
     <div id="fourthLeft" class="container aniview" data-av-animation="fadeInLeft">
         <div class="graphicElement">
@@ -155,14 +155,14 @@
             <b>evalúa el desempeño de tu campaña digital.</b>
         </h2>
     </div>
-    <img class="aniview" id="app1" data-av-animation="fadeInDown" src="app/assets/img/app1.png" alt="">
-    <img class="aniview" id="app2" data-av-animation="fadeInDown" src="app/assets/img/app2.png" alt="">
-    <img class="aniview" id="app3" data-av-animation="fadeInDown" src="app/assets/img/app3.png" alt="">
+    <img class="aniview" id="app1" data-av-animation="fadeInDown" src="https://drive.google.com/uc?id=1V_i-x2kP85p9DwHXTKPaj66YlOLnV2Qn" alt="">
+    <img class="aniview" id="app2" data-av-animation="fadeInDown" src="https://drive.google.com/uc?id=1iNflWOyOBWLfwup6jLlTbxHuKTfrqn9R" alt="">
+    <img class="aniview" id="app3" data-av-animation="fadeInDown" src="https://drive.google.com/uc?id=1AEbwlZniw7ihtBxBogWKG5NLD8Hzwqbg" alt="">
 </div>
 
 <div id="social-div" class="parallax-container valign-wrapper">
     <div class="parallax">
-        <img class="socialBackground" src="app/assets/img/fondo.jpg">
+        <img class="socialBackground" src="https://drive.google.com/uc?id=1We2tj70GzxtbDbk8NcI_wZPfGgRl6xiZ">
     </div>
     <div class="container">
         <div class="row">
@@ -179,7 +179,7 @@
                 </h2>
             </div>
             <div class="col l6 m6 s12">
-                <img class="aniview" id="likes" data-av-animation="fadeInRight" src="app/assets/img/prospectos.gif" alt="">
+                <img class="aniview" id="likes" data-av-animation="fadeInRight" src="https://drive.google.com/uc?id=1Q224ez6Py-rKzUdSQwRna2ID7t6LHHH8" alt="">
             </div>
         </div>
     </div>
@@ -212,7 +212,7 @@
             <div class="modal-content">
                 <h4>Vacantes</h4>
                 <div class="container">
-                    <form action="https://formspree.io/gerardo.mdn95@gmail.com" method="POST">
+                    <form action="https://formspree.io/mgarcia@koomkin.com" method="POST">
                         <div class="input-field">
                             <input type="text" name="Nombre" class="validate" required>
                             <label>Nombre</label>
@@ -229,10 +229,6 @@
                             <textarea id="textarea1" name="Mensaje" class="materialize-textarea" required></textarea>
                             <label>Mensaje</label>
                         </div>
-                        <div "input-field">
-                            <p>Adjunta tu CV aquí</p>
-                            <input name="CV" type="file">
-                        </div>
                         <button id="enviar" class="waves-effect waves-light btn" type="submit" type="submit">Enviar</button>
                         <br>
                     </form>
@@ -247,7 +243,7 @@
 
 <div id="datos" class="parallax-container valign-wrapper bluem-div">
     <div class="parallax">
-        <img class="socialBackground" src="app/assets/img/city.jpg">
+        <img class="socialBackground" src="https://drive.google.com/uc?id=1rk4XsoikI5kb8khVkVkIaAiRl4YevdOM">
     </div>
     <div class="container">
         <div id="datosRow" class="row datosElements">
@@ -302,7 +298,7 @@
 
 <div id="contacto" class="parallax-container valign-wrapper form-div">
     <div class="parallax">
-        <img class="socialBackground" src="app/assets/img/city.jpg">
+        <img class="socialBackground" src="https://drive.google.com/uc?id=1rk4XsoikI5kb8khVkVkIaAiRl4YevdOM">
     </div>
     <div class="container">
         <div id="contactoRow" class="row">
